--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -291,7 +291,7 @@
       "feeling_fine": "Good to hear you’re feeling fine. You shuold monitor your symptoms and stay at home.",
       "find_telehealth": "Find telehealth services",
       "follow_cdc_guidance": "If you develop symptoms, follow CDC guidance.",
-      "guidance": "Guidance",
+      "guidance": "Your Guidance",
       "if_symptoms_develop": "If you develop any COVID-19 symptoms or if you start to feel worse, call your healthcare provider, clinician advice line, or telemedicine provider.",
       "may_help_you_feel_better": "Here are some steps that may help you feel better:",
       "monitor_your_symptoms": "Sorry you’re feeling ill. Stay at home and monitor your symptoms. Call your provider if you get worse symptoms, stay at home.",
