Remove "CheckIn" Model, Update "My Health" Screen (#502)
### Why
We'd like to remove the concept of a "Check In" from the app because it added complexity in its implementation and did not provide significant value to the user. 

### This Commit
This commit consolidates the "today" and "overtime" screens into a single screen that 
- allows the user to log symptoms
- allows the user to navigate to the symptom checker if they are not feeling well

This commit also removes the native iOS `CheckInModule` and the related code for storing and fetching `CheckIns` from the database

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -171,15 +171,6 @@
     "question_icon": "Question mark icon",
     "unchecked_checkbox": "Unchecked checkbox"
   },
-  "my_health": {
-    "over_time": "Over Time",
-    "symptom_log": {
-      "did_not_check_in": "You did not check in",
-      "feeling_not_well": "You were not feeling well",
-      "feeling_well": "You were feeling well"
-    },
-    "today": "Today"
-  },
   "navigation": {
     "connect": "Connect",
     "exposure": "Exposure",
@@ -357,30 +348,21 @@
     "you_are_sharing_data": "You are sharing anonymized data"
   },
   "symptom_checker": {
-    "check_in_again": "Check in again tomorrow.",
-    "check-in": "Check-in",
     "delete_entry": "Delete entry",
     "entry_deleted": "Entry deleted",
     "errors": {
-      "adding_check_in": "Sorry, we could not add todays check in",
       "adding_symptoms": "Sorry, we could not log your symptoms",
       "deleting_symptom_log": "Sorry, we could not delete the symptoms log",
       "updating_symptoms": "Sorry, we could not update your symptoms"
     },
-    "find_a_test_center": "Find a test center",
     "find_a_test_center_nearby": "Find a test center nearby",
     "get_tested": "We recommend you get tested for COVID-19.",
-    "glad_to_hear_it": "Glad to hear it!",
-    "good": "Good",
     "guidance": "Guidance",
-    "how_are_you_feeling": "How are you feeling today?",
     "log_symptoms": "Log symptoms",
-    "my_health": "My Health",
     "no_symptom_history": "No symptom history",
-    "not_well": "Not well",
     "person_finding_location_label": "A person on their phone searching for a location.",
     "sorry_not_feeling_well": "Sorry you're not feeling well.",
-    "sorry_to_hear_it": "Sorry to hear you're not feeling well!",
+    "symptom_log": "Symptom Log",
     "symptoms_saved": "Symptoms saved!",
     "symptoms_updated": "Symptoms updated!",
     "what_symptoms": "What symptoms are you experiencing?"
