"How are you feeling" screen (#503)
### Why
The designs specify a screen where the user can indicate whether they are symptomatic or asymptomatic before continuing through the self screener (https://www.figma.com/file/VtTGBpSdoWHmtiDYnO3p4f/Self-Screener-(107)?node-id=531%3A11342)

### This Commit
This commit implements the screen, which navigates the user to either the "symptomatic flow" or the "asymptomatic flow" depending on their selection

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -309,6 +309,11 @@
       "you_have_underlying_conditions": "Sorry you’re not feeling well. Your symptoms may be related to COVID-19. You also have medical conditions that may put you at risk of becoming more seriously ill.",
       "your_symptoms_might_be_related": "Sorry you’re not feeling well. Your symptoms may be related to COVID-19."
     },
+    "how_are_you_feeling": {
+      "title": "How are you feeling?",
+      "good": "Good",
+      "not_well": "Not well"
+    },
     "intro": {
       "agree_and_start_screener": "Agree and start screener",
       "covid19_self_screener": "COVID-19 Self Screener",
