Display information about the logs timeline
Why:
----

The application will delete stale logs, currently 14 days automatically.
Users should be aware of this information.

This Commit:
----

- Change android delete stale entries to receive an amount of days
- Change ios delete stale logs to receive a number of days
- Change stale symptom deletion to send a number of days
- Display info for users of the data that will be kept on the device

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -365,6 +365,7 @@
     "get_tested": "We recommend you get tested for COVID-19.",
     "guidance": "Guidance",
     "log_symptoms": "Log symptoms",
+    "to_protect_your_privacy": "To protect your privacy, logs more than {{days}} days old are deleted",
     "no_symptom_history": "No symptom history…",
     "person_finding_location_label": "A person on their phone searching for a location.",
     "sorry_not_feeling_well": "Sorry you're not feeling well.",
