--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -348,7 +348,7 @@
     "please_view_privacy_policy": "Please view their privacy policy",
     "share_anonymized_data": "Share Anonymized Data",
     "share_anonymized_data_disclaimer": "By proceeding, you agree to share anonymized answers to screening quesitons with the {{healthAuthorityName}}",
-    "share_anonymized_data_para": "Your anonymous data helps the {{healthAuthorityName}} Commission analyze, track, and contain the spread of COVID-19. Your data will be aggregated that from other PathCheck users who choose to share.\n\nYour data contains your survey responses and zipcode, but no additional or personally-identifying information.\n\n The {{healthAuthorityName}} will retain your anonymous data for a specific period of time.",
+    "share_anonymized_data_para": "Your anonymous data helps the {{healthAuthorityName}} Commission analyze, track, and contain the spread of COVID-19. Your data will be aggregated with data from other users who choose to share.\n\nYour data contains your survey responses and zipcode, but no additional or personally-identifying information.\n\n The {{healthAuthorityName}} will retain your anonymous data for a specific period of time.",
     "sharing_anonymized_data": "Sharing anonymized data",
     "stop_sharing_data": "Stop Sharing Data",
     "you_are_sharing_data": "You are sharing anonymized data"
