--- a/src/locales/es_PR.json
+++ b/src/locales/es_PR.json
@@ -169,15 +169,6 @@
     "question_icon": "¿?",
     "unchecked_checkbox": "Casilla de verificación sin marcar"
   },
-  "my_health": {
-    "over_time": "Con el tiempo",
-    "symptom_log": {
-      "did_not_check_in": "No se ha registrado",
-      "feeling_not_well": "No te sentías bien.",
-      "feeling_well": "Te sentías bien."
-    },
-    "today": "Hoy"
-  },
   "navigation": {
     "connect": "Conectar",
     "exposure": "Exposición",
@@ -312,6 +303,10 @@
       "you_have_underlying_conditions": "Siento que no te sientas bien. Sus síntomas pueden estar relacionados con COVID-19. También tienes condiciones médicas que pueden ponerte en riesgo de enfermarse más gravemente.",
       "your_symptoms_might_be_related": "Lamento que no se sienta bien. Según sus respuestas, sus síntomas pueden estar relacionados con COVID-19."
     },
+    "how_are_you_feeling": {
+      "good": "Bien",
+      "not_well": "Mal"
+    },
     "intro": {
       "agree_and_start_screener": "Acepte y comience el evaluador",
       "covid19_self_screener": "Autoevaluación COVID-19",
@@ -344,36 +339,26 @@
     "please_view_privacy_policy": "Consulte su política de privacidad",
     "share_anonymized_data": "Comparta datos anónimos",
     "share_anonymized_data_disclaimer": "Al continuar, acepta compartir respuestas anónimas a preguntas de detección con {{healthAuthorityName}}",
-    "share_anonymized_data_para": "Sus datos anónimos ayudan al {{healthAuthorityName}} a analizar, rastrear y contener la propagación de COVID-19. Sus datos serán agregados a los de otros usuarios de PathCheck que elijan compartir.\n\nSus datos contienen sus respuestas a la encuesta y el código postal, pero ninguna información adicional o de identificación personal.\n\nEl {{healthAuthorityName}} retendrá sus datos anónimos por un período de tiempo específico.",
+    "share_anonymized_data_para": "Sus datos anónimos ayudan al {{healthAuthorityName}} a analizar, rastrear y contener la propagación de COVID-19. Sus datos serán agregados a los de otros usuarios que elijan compartir.\n\nSus datos contienen sus respuestas a la encuesta y el código postal, pero ninguna información adicional o de identificación personal.\n\nEl {{healthAuthorityName}} retendrá sus datos anónimos por un período de tiempo específico.",
     "sharing_anonymized_data": "Compartiendo datos anónimos",
     "stop_sharing_data": "Dejar de compartir datos",
     "you_are_sharing_data": "Estás compartiendo datos anónimos"
   },
   "symptom_checker": {
-    "check_in_again": "Regístrese de nuevo mañana.",
-    "check-in": "Check-in",
     "delete_entry": "Borrar entrada",
     "entry_deleted": "Entrada eliminada",
     "errors": {
-      "adding_check_in": "Lo sentimos, no pudimos agregar el registro de hoy.",
       "adding_symptoms": "Lo sentimos, no pudimos registrar sus síntomas",
       "deleting_symptom_log": "Lo sentimos, no pudimos eliminar el registro de síntomas",
       "updating_symptoms": "Lo sentimos, no pudimos actualizar sus síntomas"
     },
-    "find_a_test_center": "Encuentre un centro de pruebas",
     "find_a_test_center_nearby": "Encuentre un centro de pruebas cercano",
     "get_tested": "Le recomendamos que se haga la prueba de COVID-19.",
-    "glad_to_hear_it": "¡Me alegra escucharlo!",
-    "good": "Bien",
     "guidance": "Guía",
-    "how_are_you_feeling": "¿Cómo te sientes hoy?",
     "log_symptoms": "Registrar los síntomas",
-    "my_health": "Mi salud",
     "no_symptom_history": "Sin historial de síntomas",
-    "not_well": "Mal",
     "person_finding_location_label": "Una persona en su teléfono buscando una ubicación.",
     "sorry_not_feeling_well": "Lamento que no se sienta bien.",
-    "sorry_to_hear_it": "¡Lamento que no te sientas bien!",
     "symptoms_saved": "¡Síntomas guardados!",
     "symptoms_updated": "¡Síntomas actualizados!",
     "what_symptoms": "¿Qué síntomas tienes?"
