--- a/src/locales/ht_HT.json
+++ b/src/locales/ht_HT.json
@@ -136,9 +136,6 @@
     "privacy_policy": "Règleman sou enfòmasyon prive",
     "question_icon": "Imaj pwen entèwogasyon"
   },
-  "my_health": {
-    "today": "Jodi a"
-  },
   "navigation": {
     "connect": "Konekte",
     "exposure": "Ekspozisyon",
@@ -200,6 +197,10 @@
     },
     "guidance": {
       "guidance": "Gid"
+    },
+    "how_are_you_feeling": {
+      "good": "Byen",
+      "not_well": "Pa byen"
     }
   },
   "settings": {
@@ -208,22 +209,14 @@
     "please_view_privacy_policy": "Tanpri gade politik vi prive yo",
     "share_anonymized_data": "Pataje Done Anonim",
     "share_anonymized_data_disclaimer": "Pa pwosedi sa, ou dakò yo pataje repons anonim pou kesyon tès depistaj ak {{healthAuthorityName}}",
-    "share_anonymized_data_para": "Done anonim ou yo ede Otorite Swen Sante Ayiti yo analize, swiv, epi evite COVID-19 pwopaje. Done ou yo pral lye ak lòt itilizatè Chase Kowona (\"PathCheck\") ki chwazi pataje pa yo tou. \n\nDone ou gen repons sondaj ou yo ak kòd postal, men pa gen okenn enfòmasyon adisyonèl oswa pèsonèlman idantifyab. \n\n{{healthAuthorityName}} pral kenbe done anonim ou pou yon peryòd tan espesifik."
+    "share_anonymized_data_para": "Done anonim ou yo ede Otorite Swen Sante Ayiti yo analize, swiv, epi evite COVID-19 pwopaje. Done ou yo pral lye ak lòt itilizatè Chase Kowona ki chwazi pataje pa yo tou. \n\nDone ou gen repons sondaj ou yo ak kòd postal, men pa gen okenn enfòmasyon adisyonèl oswa pèsonèlman idantifyab. \n\n{{healthAuthorityName}} pral kenbe done anonim ou pou yon peryòd tan espesifik."
   },
   "symptom_checker": {
-    "check-in": "Tcheke-antre",
-    "find_a_test_center": "Jwenn yon sant tès",
     "find_a_test_center_nearby": "Jwenn yon sant tès ki tou pre",
     "get_tested": "Nou rekòmande ou fè tès pou COVID-19.",
-    "glad_to_hear_it": "Kontan tande sa!",
-    "good": "Byen",
     "guidance": "Gid",
-    "how_are_you_feeling": "Kijan ou santi ou jodi a?",
-    "my_health": "Sante mwen",
-    "not_well": "Pa byen",
     "person_finding_location_label": "Yon moun sou telefòn kap chèche yon kote.",
     "sorry_not_feeling_well": "Nou dezole ke ou pa santi w byen. Sentòm ou yo ka gen rapò ak COVID-19.",
-    "sorry_to_hear_it": "Nou dezole ke ou pa santi w byen!",
     "symptoms_saved": "Sentòm yo anrejistre!",
     "what_symptoms": "Ki sentòm ou genyen?"
   },
