--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -160,14 +160,6 @@
     "question_icon": "물음표 아이콘",
     "unchecked_checkbox": "체크되지 않은 확인란"
   },
-  "my_health": {
-    "over_time": "시간 초과",
-    "symptom_log": {
-      "feeling_not_well": "귀하의 컨디션이 좋지않았습니다.",
-      "feeling_well": "귀하의 컨디션이 좋았습니다."
-    },
-    "today": "오늘"
-  },
   "navigation": {
     "connect": "연결",
     "exposure": "노출",
@@ -253,6 +245,10 @@
     },
     "guidance": {
       "guidance": "지침"
+    },
+    "how_are_you_feeling": {
+      "good": "좋습니다.",
+      "not_well": "좋지 않습니다."
     }
   },
   "settings": {
@@ -261,22 +257,14 @@
     "please_view_privacy_policy": "개인 정보 보호 정책을 확인하십시오.",
     "share_anonymized_data": "익명화된 데이터 공유",
     "share_anonymized_data_disclaimer": "계속 진행하면 {{healthAuthorityName}}의 검사 질의에 익명의 답변을 공유하는데 동의합니다.",
-    "share_anonymized_data_para": "귀하의 익명 데이터는 {{healthAuthorityName}}이 코로나19의 확산을 분석, 추적 및 방지하는데 도움이 됩니다. 데이터 공유에 동의한 다른 \"경로확인(PathCheck)\" 사용자로부터 당신의 데이터가 공개될 것입니다.\n\n데이터는 설문 조사 응답과 우편 번호를 포함하지만 추가 정보나 개인 식별 정보는 포함하지 않습니다.\n\n{{healthAuthorityName}}은 일정 기간 동안 당신의 익명 데이터를 보관할 것입니다."
+    "share_anonymized_data_para": "귀하의 익명 데이터는 {{healthAuthorityName}}이 코로나19의 확산을 분석, 추적 및 방지하는데 도움이 됩니다. 데이터 공유에 동의한 다른 사용자로부터 당신의 데이터가 공개될 것입니다.\n\n데이터는 설문 조사 응답과 우편 번호를 포함하지만 추가 정보나 개인 식별 정보는 포함하지 않습니다.\n\n{{healthAuthorityName}}은 일정 기간 동안 당신의 익명 데이터를 보관할 것입니다."
   },
   "symptom_checker": {
-    "check-in": "체크인",
-    "find_a_test_center": "코로나19 검사소 찾기",
     "find_a_test_center_nearby": "인근 코로나19 검사소 찾기",
     "get_tested": "코로나19 검사를 받는 것을 권장드립니다.",
-    "glad_to_hear_it": "다행입니다!",
-    "good": "좋습니다.",
     "guidance": "지침",
-    "how_are_you_feeling": "오늘은 컨디션이 어떻습니까?",
-    "my_health": "나의 건강",
-    "not_well": "좋지 않습니다.",
     "person_finding_location_label": "휴대 전화에서 위치를 검색하는 사람.",
     "sorry_not_feeling_well": "귀하의 컨디션이 좋지 않으시다니 걱정입니다. 귀하의 증상은 코로나19와 관련이 있을 수 있습니다.",
-    "sorry_to_hear_it": "귀하의 컨디션이 안좋으시다니 걱정입니다!",
     "symptoms_saved": "증상이 저장되었습니다!",
     "what_symptoms": "어떤 증상이 있습니까?"
   },
