--- a/src/locales/zh_TW.json
+++ b/src/locales/zh_TW.json
@@ -16,12 +16,18 @@
     "well_get_in_touch": "我們聯繫您"
   },
   "common": {
+    "back": "返回",
+    "disabled": "關閉",
     "edit": "編輯",
+    "enabled": "已啟用",
     "next": "下一個",
     "save": "救"
   },
   "export": {
+    "consent_subheader_1": "為什麼我要分享？",
+    "consent_subheader_2": "該應用程序的運作方式",
     "error": {
+      "invalid_format": "無效的格式",
       "network_connection_error": "沒有網路"
     },
     "person_and_health_expert": "與健康專家交談的人",
@@ -36,7 +42,8 @@
         "no_token_for_existing_keys": "已將現有資料發送到服務器。這通常代表此程序曾在此設備上嘗試過，但使用的是不同的應用程式，您可以將此信息告知提供所使用驗證碼的機構。添加了{{newKeysInserted}}新密鑰。",
         "title": "嘗試提交現有密鑰"
       }
-    }
+    },
+    "start_header_bluetooth": "幫助抑制病毒的傳播並保護社區中的其他人"
   },
   "exposure_history": {
     "exposure_detail": {
@@ -44,14 +51,29 @@
       "personalize_my_guidance": "指引個人化",
       "schedule_callback": "安排與{{healthAuthorityName}}追蹤接觸者的人員的聯繫。",
       "speak_with_contact_tracer": "與接追蹤接觸者的人員通話"
-    }
+    },
+    "no_connectivity_message": "您沒有連接到網路！"
   },
   "home": {
     "bluetooth": {
-      "tracing_off_subheader_location": "啟用藍牙，接近追蹤和位置以獲取可能的接觸資訊"
+      "bluetooth_disabled_error_message": "到設定中打開藍芽來修正錯誤",
+      "bluetooth_disabled_error_title": "在設定中開啟藍芽",
+      "bluetooth_header": "藍牙",
+      "location_disabled_error_message": "要開始接觸通知，請在設定中授權定位",
+      "location_disabled_error_title": "在設定中授權",
+      "location_header": "定位",
+      "proximity_tracing_header": "接觸追蹤",
+      "report_positive_result": "回報陽性測試結果",
+      "share": "分享應用程式來幫助保護自己和他人。",
+      "share_message": "用用看這個應用程式{{applicationName}} ，它可以幫助我們預防COVID-19！ {{appDownloadLink}}",
+      "tracing_off_subheader_location": "啟用藍牙，接近追蹤和位置以獲取可能的接觸資訊",
+      "tracing_on_header": "啟動"
     },
     "fix": "透過{{technology}}解決問題",
     "get_more_info": "透過{{technology}}獲得更多資訊",
+    "location_info_body_1": "接觸通知技術使用藍牙掃描來了解哪些設備相鄰。若要在具備Android 6.0及更高版本的所有手機上使用藍牙掃描，需要為所有應用程式打開設備定位，而不僅是使用“接觸通知系統”的應用程式。",
+    "location_info_header": "定位",
+    "location_info_subheader_1": "為什麼我需要打開我的定位？",
     "open_settings": "打開設定",
     "proximity_tracing": {
       "unauthorized_error_message_android": "若要啟動接近追蹤和接處通知，請至\"COVID-19接觸通知設計\"，並開啟\"使用接觸通知\"",
@@ -62,17 +84,11 @@
     "status_icon_inactive_label": "紅色圓圈中的白色叉叉字樣"
   },
   "label": {
+    "checked_checkbox": "選取的選項",
+    "go_to_home_view": "回到首頁",
     "launch_enable_notif": "開啟通知",
-    "launch_get_started": "開始"
-  },
-  "my_health": {
-    "over_time": "在這段時間內",
-    "symptom_log": {
-      "did_not_check_in": "您沒有簽到",
-      "feeling_not_well": "你感到不舒服",
-      "feeling_well": "你沒有不舒服"
-    },
-    "today": "今天"
+    "launch_get_started": "開始",
+    "unchecked_checkbox": "未選取的選項"
   },
   "navigation": {
     "connect": "連接",
@@ -81,30 +97,93 @@
     "symptom_checker": "症狀檢驗"
   },
   "onboarding": {
+    "app_setup_complete_body": "{{applicationName}}已開啟。感謝您一同幫助打擊病毒。",
+    "app_setup_complete_header": "應用程式設置完成！",
+    "app_setup_incomplete_body": "{{applicationName}}需要“接處追蹤”和Bluetooth權限才能得知您於何時何地接觸到COVID-19病毒。您可以在“設置”中對此進行授權。",
+    "app_setup_incomplete_header": "應用程式設定不完整",
+    "app_setup_incomplete_location_body": "{{applicationName}}需要“接處追蹤”和Bluetooth權限才能得知您於何時何地接觸到COVID-19病毒。您可以在“設置”中對此進行授權。",
     "eula": "最終用戶法律協議",
     "location_alert_body": "若要使用藍牙掃描，需要打開設備的定位設置。",
     "location_alert_header": "從“ {{applicationName}} ”啟用定位",
     "location_body": "若要使用藍牙掃描，您需要開啟設備位置。該應用程序不會使用您的訂位資料，且不會無法追蹤您的設備。",
     "location_header": "開啟定位",
     "location_subheader": "為什麼需要打開手機的定位設置？",
+    "notification_subheader3": "此應用程式不能使您免於COVID-19的感染。",
     "please_read_the": "請閱讀",
     "privacy_policy": "隱私政策",
+    "protect_privacy_button": "我們如何保護您的隱私",
+    "protect_privacy": {
+      "body_1": "這些ID不包含任何個人信息，且每10到20分鐘更改一次，以保護您的身份。",
+      "body_2": "與其他設備交換隨機ID的功能使用的是低藍芽功效。即使您的手機沒有將此功能開啟，這使{{applicationName}}可以匿名追蹤您生活中接觸的對象。",
+      "body_3": "去診之後，用戶可以透過一組密碼與{{applicationName}}來分享診診斷說明。他們的手機裡最後的隨機ID將被被標記並安全地上傳到伺服器。此驗證過程有助於防止誤報。",
+      "body_4": "如果被標記的ID與手機中存儲的ID相匹配，則表明您可能遇到了確診病患。 {{applicationName}}可以通過這種方式確定您是否接觸到病毒。",
+      "body_5": "如果我們有發現接觸對象， {{applicationName}}將通知您並提供衛生部門的指示。\n\n這就是{{applicationName}}可以如何幫助您做出健康的決定，並確保社區的安全，而這一切都是匿名的。",
+      "header": "我們如何保護您的隱私",
+      "subheader_1": "當您啟用“接觸追蹤”時，您的電話會以隨機變化的ID標記",
+      "subheader_2": "啟用“接觸追蹤”功能的手機可以與他們遇到的其他設備交換ID",
+      "subheader_3": "當用戶確診時，他們可以選擇匿名分享其健康狀況",
+      "subheader_4": "每部電話會定期發送訊號給伺服器以獲取被標記的ID列表，並查找配對對象",
+      "subheader_5": "如果{{applicationName}}發現帶有被標記的ID的配對，將會通知您"
+    },
+    "proximity_tracing_body1": "如果安裝了該應用程式的智能手機是開啟的狀態、已啟用藍牙並在彼此附近待了一段時間，則會在您的設備上紀錄一個接觸案例。",
+    "proximity_tracing_body2": "如果接觸到他人，您的數據和訊息將保持匿名。該應用程式不存儲任何個人資料。僅交換隨機ID，而這些資訊將在14天內刪除。",
+    "proximity_tracing_button": "啟用接觸追蹤",
+    "proximity_tracing_header": "啟用接觸追蹤",
+    "proximity_tracing_subheader1": "該應用程序的運作方式",
+    "proximity_tracing_subheader2": "我的資料安全嗎？",
+    "proximity_tracing_subheader3": "此應用程式不能使您免於COVID-19的感染。",
+    "screen_5_button": "開始",
+    "screen1_button": "該應用程序的運作方式",
+    "screen1_header": "只要我們同心協力，就可以減緩COVID-19的傳播。",
+    "screen1_image_label": "擊掌的兩個人",
+    "screen2_button": "我的隱私受到保護嗎？",
+    "screen2_header": "您的手機會記住它接觸的其他設備，但不會讓任何人識別您的身份。",
+    "screen2_image_label": "在使用手機的兩個人",
+    "screen3_button": "如果我接觸到病毒怎麼辦？",
+    "screen3_header": "不會洩漏一點可以識別個人資料的訊息",
+    "screen3_image_label": "在上鎖的手機前面的人",
+    "screen4_button": "如果我生病了怎麼辦？",
+    "screen4_header": "如果您可能曾經接觸過COVID-19，該應用程式將通知您",
+    "screen4_image_label": "在手機上收到通知的人",
+    "screen5_header": "您可以透過應用程式幫助減緩COVID-19的傳播、保護他人並直接從健康專家那裡獲得幫助。",
+    "screen5_image_label": "與健康專家線上交談的人",
     "terms_header_title": "使用條款"
   },
   "screen_titles": {
     "callback": "回電要求",
+    "exposures": "接觸",
     "how_the_app_works": "該應用程序的運作方式",
     "legal": "法遵"
   },
   "self_screener": {
+    "age_range": {
+      "eighteen_to_sixty_four": "18-64",
+      "get_my_guidance": "得到我的指南",
+      "how_old_are_you": "你幾歲？",
+      "sixty_five_and_over": "65歲以上"
+    },
+    "call_emergency_services": {
+      "call_emergencies": "致電{{emergencyPhoneNumber}}",
+      "seek_medical_attention": "需要即刻的醫療照護",
+      "urgent_medical_attention_needed": "若您需要緊急醫療服務，請致電{{emergencyPhoneNumber}}或去急診室"
+    },
     "general_symptoms": {
-      "other": "其他"
+      "are_you_experiencing": "您是否具有以下症狀？",
+      "other": "其他",
+      "select_any": "選擇所有符合條件的選項。"
     },
     "guidance": {
       "guidance": "指南"
     },
+    "how_are_you_feeling": {
+      "good": "好",
+      "not_well": "不太好"
+    },
     "intro": {
       "covid19_self_screener": "COVID-19自我篩選"
+    },
+    "underlying_conditions": {
+      "do_you_have": "您是否具有以下任何條件？"
     }
   },
   "settings": {
@@ -114,36 +193,26 @@
     "please_view_privacy_policy": "請查看他們的隱私政策",
     "share_anonymized_data": "分享匿名資料",
     "share_anonymized_data_disclaimer": "若要繼續進行，您同意與{{healthAuthorityName}}分享篩查問題的匿名答案",
-    "share_anonymized_data_para": "您的匿名資料可幫助{{healthAuthorityName}}委員會的分析，追蹤和停止COVID-19的傳播。您的資料將匯總來自其他選擇共享的PathCheck用戶的數據。\n\n您的資料包含您的調查回復和郵政編碼，但沒有其他或個人識別信息。\n\n {{healthAuthorityName}}將保留您的匿名資料一段時間。",
+    "share_anonymized_data_para": "您的匿名資料可幫助{{healthAuthorityName}}委員會的分析，追蹤和停止COVID-19的傳播。您的資料將匯總來自其他選擇共享的用戶的數據。\n\n您的資料包含您的調查回復和郵政編碼，但沒有其他或個人識別信息。\n\n {{healthAuthorityName}}將保留您的匿名資料一段時間。",
     "sharing_anonymized_data": "分享匿名數據",
     "stop_sharing_data": "停止分享數據",
     "you_are_sharing_data": "您正在分享匿名數據"
   },
   "symptom_checker": {
-    "check_in_again": "明天再次登記",
-    "check-in": "報到",
     "delete_entry": "刪除條目",
     "entry_deleted": "條目已刪除",
     "errors": {
-      "adding_check_in": "抱歉，我們無法幫您做今日簽到",
       "adding_symptoms": "抱歉，我們無法紀錄您的症狀",
       "deleting_symptom_log": "抱歉，我們無法刪除您的症狀紀錄",
       "updating_symptoms": "抱歉，我們無法更新您的症狀紀錄"
     },
-    "find_a_test_center": "尋找檢疫中心",
     "find_a_test_center_nearby": "尋找您鄰近的檢疫中心",
     "get_tested": "我們建議您針對COVID-19做檢疫。",
-    "glad_to_hear_it": "很高興聽到這個消息！",
-    "good": "好",
     "guidance": "指南",
-    "how_are_you_feeling": "你今天感覺如何？",
     "log_symptoms": "記錄症狀",
-    "my_health": "我的健康",
     "no_symptom_history": "無症狀史",
-    "not_well": "不太好",
     "person_finding_location_label": "一個人在電話上搜索位置。",
     "sorry_not_feeling_well": "很抱歉您感到不適",
-    "sorry_to_hear_it": "很抱歉您感到不適",
     "symptoms_saved": "症狀已保存！",
     "symptoms_updated": "症狀已更新！",
     "what_symptoms": "您有甚麼症狀？"
