Implement new home screen design
Why:
The home screen does not currently display the most important and useful content to users. We would like for the home screen to be more helpful.

This commit:
- Implements a new design for the home screen
- Renames ProxmityTracing to ExposureNotifications
- Uses the term Exposure Detection to describe the activation status of the app. If Exposure Detection is on, then the app is working properly and exposures are being detected.
- Moves the Exposure Detection status information to a new screen that is accessible from the Home screen
- Adds the "Talk to a contact tracer" button to the home screen
- Adds a useExposureDetectionStatus hook that provides an exposureDetectionStatus boolean. We added this hook to extract the logic of determining the status of Exposure Detection so it can be reused. We did not add this logic to the SystemServicesContext because the hook uses information from the PermissionsContext and SystemServicesContext, so we thought it would be simpler to put it in a hook, at least for now.

Notes:
- In a future PR, we will solve some navigation-related issues on the Home screen. Some of the screens open up by pushing the screen to the left, but we would like for these to come up from the bottom like standard modals.
- The Home screen is currently very stark, so we would like to add some helpful illustrations to the floating containers in a future PR.

Co-Authored-By: Matt Buckley <matt@nicethings.io>

--- a/src/locales/ch.json
+++ b/src/locales/ch.json
@@ -114,8 +114,8 @@
       "share": "Usa yan otro siha i app ya protehi hao yan i pumalu siha.",
       "share_message": "Atan esti na app {{applicationName}}, ni sina ha ayuda hit muna para i COVID 19!\n{{appDownloadLink}}",
       "tracing_off_header": "Ti kalalamten",
-      "tracing_off_subheader": "Na lala i Bluetooth yan i Proximity Tracing para uchuli infotmasion yanggen guaha exposures siha",
-      "tracing_off_subheader_location": "Sotta i Bluetooth, i proximity Tracing yan i Location para u chuli infotmasion put i tinanmi siha",
+      "tracing_off_subheader": "Na lala i Bluetooth yan i Exposure Notifications para uchuli infotmasion yanggen guaha exposures siha",
+      "tracing_off_subheader_location": "Sotta i Bluetooth, i Exposure Notifications yan i Location para u chuli infotmasion put i tinanmi siha",
       "tracing_on_header": "Lalala"
     },
     "fix": "Famauleg i problema ni {{technology}}",
@@ -127,7 +127,7 @@
     "proximity_tracing_info_body_1": "Yanggen man mana 'on' i smartphones  ni man gaieyu app,  kalalamten i Bluetooth ya manhihot kon tiempo i encounter ma register gi iyo-mu device.",
     "proximity_tracing_info_body_2": "Put sienkasu guaha un susedi, todu infotmasion put hagu man manana.I app ti sina ha goti ni hafafa' na petsonat na infotmasion. I kosequat ha siha na IDs sina man ma usa.Man ma na suha est siha gi duranten i 14 dias.",
     "proximity_tracing_info_header": "Matatiyen i man akihut",
-    "proximity_tracing_info_subheader_1": "Hafa bidada-na i Proximity Tracing?",
+    "proximity_tracing_info_subheader_1": "Hafa bidada-na i Exposure Notifications?",
     "proximity_tracing_info_subheader_2": "Kao siguro i iyo-ku infotmasion?",
     "status_icon_active_label": "I apka na  x  gi betde na sitkulu",
     "status_icon_inactive_label": "I apaka na  x gi agaga na sitkulu"
@@ -153,9 +153,9 @@
     "activation_header_title": "App Setup",
     "app_setup_complete_body": "Kalalamten i {{applicationName}}. Si yu'us ma'asi ni ayudu-mu para umautut esti i kadenan i chetnot.",
     "app_setup_complete_header": "Kumpledo i App Setup",
-    "app_setup_incomplete_body": "{{applicationName}} ha nesisita petmisu para Proximity Tracing and Bluetooth para umatungo ngaian yan manu na ma tanmi hao ni COVID 19. Sina un autorisa esti gi Settings.",
+    "app_setup_incomplete_body": "{{applicationName}} ha nesisita petmisu para Exposure Notifications and Bluetooth para umatungo ngaian yan manu na ma tanmi hao ni COVID 19. Sina un autorisa esti gi Settings.",
     "app_setup_incomplete_header": "Inkumpledo i App Setup",
-    "app_setup_incomplete_location_body": "{{applicationName}} ha nesisita Proximity Tracing, Bluetooth, and Location petmisu para umatungo ngaian yan manu na un gaya i COVID 19. Sina un autorisa  esti gi Settings.",
+    "app_setup_incomplete_location_body": "{{applicationName}} ha nesisita Exposure Notifications, Bluetooth, and Location petmisu para umatungo ngaian yan manu na un gaya i COVID 19. Sina un autorisa  esti gi Settings.",
     "eula": "Na para i User Legal Agreement",
     "eula_agree_terms_of_use": "Hunggan, hu taitai yan hu aksepta i kondision para usu",
     "location_alert_body": "Para uma usa Bluetooth scanning, nesisita mana 'on' i device location setting.",
@@ -179,8 +179,8 @@
       "body_4": "Yanggen guaha flagged ID parehu yan an ID gi telefon-mu, kumekeilekna na sina ha umafakcha hao yan taotao ni positive i test-na para COVID 19. Taiguini {{applicationName}} na sina ha ditetmina kao ma tanmi hao ni virus.",
       "body_5": "Yanggen guaha match, {{applicationName}} para un sinangani ya un nina'i mas ayudo ginen i iyo-mu health department.\n\nTaiguini i {{applicationName}} na sina nina'i hao autoridad para un famatinas desision put i nilala-mu, yan para un na safu i kommunidad-mu, todo ginen i infotmasion put hayi hao yan ginen manu hao.",
       "header": "Taimanu in protehi i iyo-mu privacy",
-      "subheader_1": "Yanggen un na 'on' Proximity Tracing, ma tagged i telefon-mu ni sessu ma tulaika siha na random IDs",
-      "subheader_2": "Fons ni man gai Proximity Tracing sina ha man atulika IDs yan otro siha devices ni man afakcha",
+      "subheader_1": "Yanggen un na 'on' Exposure Notifications, ma tagged i telefon-mu ni sessu ma tulaika siha na random IDs",
+      "subheader_2": "Fons ni man gai Exposure Notifications sina ha man atulika IDs yan otro siha devices ni man afakcha",
       "subheader_3": "Yanggen positive i test-na i server, sina ha ha na matungo put i kondision-na sin una matungo hayi gui.",
       "subheader_4": "Kada telefon ha piping i server periodically para i listan i flagged IDs  para hu espiha siha i man match",
       "subheader_5": "Un manotifika yanggen {{applicationName}} manoda positive na match ni ma flagged na ID"
@@ -188,7 +188,7 @@
     "proximity_tracing_body1": "Yanggen ma na'on' i smartphone ni gai app, ya kalalamten i Bluetooth, ya hihot i dos, kontiempo un encounter ma register gi iyo-mu device.",
     "proximity_tracing_body2": "Yanggen guaha encounter, i iyo-mu data yan infotmasion ti umatungo.I app ti ha gogoti personat na infotmasion. Ayu ha i random siha na IDs man ma tulalaika. Pues man ma funas gi 14 dias.",
     "proximity_tracing_button": "Na lala i Proximity Tracin",
-    "proximity_tracing_header": "Na lalai Proximity Tracing",
+    "proximity_tracing_header": "Na lalai Exposure Notifications",
     "proximity_tracing_subheader1": "Taimanu ma chochu?",
     "proximity_tracing_subheader2": "Kao siguro i iyo-ku data?",
     "proximity_tracing_subheader3": "Ti un prinitehi gi COVID 19 na chetnot ni esti na app.",
