--- a/src/locales/hmn.json
+++ b/src/locales/hmn.json
@@ -107,13 +107,13 @@
       "location_disabled_error_message": "Yog xav taws kev qhia xov xwm thaum mus raug neeg mob (Exposure Notification), tso cai rau Location nyob hauv qhov Settings ntawm lub twj",
       "location_disabled_error_title": "Tso cai nyob hauv Settings",
       "location_header": "Location",
-      "proximity_tracing_header": "Proximity Tracing",
+      "proximity_tracing_header": "Exposure Notifications",
       "report_positive_result": "Qhia tawm kev kuaj uas yog positive",
       "share": "Qhia lub app no mus rau lwm tus neeg kom thiaj li tiv thaiv tau koj thiab lwm tus",
       "share_message": "Mus xyuas lub app no {{applicationName}}, uas pab peb tswj tau tus kab mob COVID-19! {{appDownloadLink}}",
       "tracing_off_header": "Tsis Ciaj",
-      "tracing_off_subheader": "Taws qhov Bluetooth thiab Proximity Tracing kom thiaj li paub txog seb tau mus raug kis mob li cas lawm",
-      "tracing_off_subheader_location": "Taws Bluetooth, Proximity Tracing, thiab Location kom thiaj paub zoo txog seb puas tau mus nyob ze raug leejtwg",
+      "tracing_off_subheader": "Taws qhov Bluetooth thiab Exposure Notifications kom thiaj li paub txog seb tau mus raug kis mob li cas lawm",
+      "tracing_off_subheader_location": "Taws Bluetooth, Exposure Notifications, thiab Location kom thiaj paub zoo txog seb puas tau mus nyob ze raug leejtwg",
       "tracing_on_header": "Tseem Ciaj"
     },
     "fix": "Mus kho teeb meem nrog {{technology}}",
@@ -124,8 +124,8 @@
     "open_settings": "Qhib Mus Kho",
     "proximity_tracing_info_body_1": "Yog tias cov xov tooj uas muaj lub app nyob hauv thiab muab taws, muaj Bluetooth, thiab nyob sib ze rau ib lub sijhawm twg, ces yuav cuv cia tias tau mus raug nyob rau hauv koj lub xov tooj.",
     "proximity_tracing_info_body_2": "Nyob rau lub sijhawm koj mus raug nws, koj tej ntaub ntawv yuav tsis qhia tawm rau nws paub. Lub app no tsis ceev tseg koj ntaub ntawv ntiag tug. Tsuas yog cov naj npawb hloov mus hloov los random ID xwb. Tej no yuav muab lwv tawm li ntawm 14 hnub.",
-    "proximity_tracing_info_header": "Proximity Tracing",
-    "proximity_tracing_info_subheader_1": "Proximity Tracing ua haujlwm li cas?",
+    "proximity_tracing_info_header": "Exposure Notifications",
+    "proximity_tracing_info_subheader_1": "Exposure Notifications ua haujlwm li cas?",
     "proximity_tracing_info_subheader_2": "Kuv li ntaub ntawv puas ceev zoo cia?",
     "status_icon_active_label": "Lub cim kos dawb nyob hauv lub voj voos ntsuab",
     "status_icon_inactive_label": "Tus tsiaj ntawv x nyob hauv lub voj voos liab"
@@ -148,9 +148,9 @@
   "onboarding": {
     "activation_header_title": "App Setup",
     "app_setup_complete_body": "{{applicationName}} yeej taws lawm. Ua tsaug koj pab cheem kom tus mob tsis txhob kis mus deb.",
-    "app_setup_incomplete_body": "{{applicationName}} cheem tsum kev tso cai Proximity Tracing thiab Bluetooth kom thiaj paub thaum twg thiab qhov chaw twg koj tau mus nyob ze raug tus kab mob COVID-19 lawm. Koj tso cai rau qhov tau hauv Settings.",
+    "app_setup_incomplete_body": "{{applicationName}} cheem tsum kev tso cai Exposure Notifications thiab Bluetooth kom thiaj paub thaum twg thiab qhov chaw twg koj tau mus nyob ze raug tus kab mob COVID-19 lawm. Koj tso cai rau qhov tau hauv Settings.",
     "app_setup_incomplete_header": "Kev Tsim Tsa Koj Lub App Ua Tsis Tiav",
-    "app_setup_incomplete_location_body": "{{applicationName}} cheem tsum kev tso cai Proximity Tracing thiab Bluetooth kom thiaj paub thaum twg thiab qhov chaw twg koj tau mus nyob ze raug tus kab mob COVID-19 lawm. Koj tso cai rau qhov tau hauv Settings.",
+    "app_setup_incomplete_location_body": "{{applicationName}} cheem tsum kev tso cai Exposure Notifications thiab Bluetooth kom thiaj paub thaum twg thiab qhov chaw twg koj tau mus nyob ze raug tus kab mob COVID-19 lawm. Koj tso cai rau qhov tau hauv Settings.",
     "eula": "Kev Cai Rau Tus Siv",
     "eula_agree_terms_of_use": "Kuv tau nyeem thiab txaus siab txog kev cai siv",
     "location_alert_body": "Yog xav siv Bluetooth, ces lub twj yuav tsum taws qhov location.",
@@ -174,16 +174,16 @@
       "body_4": "Yog tias ib tus naj npawb ID raug tus ID muab sau tseg hauv koj lub xov tooj, ces txhais tau tias koj tau mus ze raug ib tus neeg mob COVID-19 lawm. Qhov no yog {{applicationName}} li kev pab thiaj txiav txim seb koj puas tau mus ze rau ib tus neeg mob tus vais lav.",
       "body_5": "Yog tias tus naj npawb raug, ces {{applicationName}} mam li qhia koj paub thiab taw qhia koj mus cuag kev kho mob li cas.\n\nQhov no yog {{applicationName}} li kev pab kom koj txawj txiav txim zoo txog koj li kev noj qab nyob zoo, thiab pab kom lub zej zog nyab xeeb, yam tsis tas qhia tawm seb koj yog leejtwg lossis koj tau mus rau qhov chaw twg lawm.",
       "header": "Peb tiv thaiv koj ntaub ntawv li cas",
-      "subheader_1": "Thaum koj taws Proximity Tracing, yuav muab ntau tus naj npawb rhais rau koj lub xov tooj, thiab cov naj npawb no yuav hloov tas li.",
-      "subheader_2": "Cov xov tooj uas taws qhov proximity tracing yuav sib hloov cov naj npawb no nrog lwm lub xov tooj uas nws tau mus ze",
+      "subheader_1": "Thaum koj taws Exposure Notifications, yuav muab ntau tus naj npawb rhais rau koj lub xov tooj, thiab cov naj npawb no yuav hloov tas li.",
+      "subheader_2": "Cov xov tooj uas taws qhov Exposure Notifications yuav sib hloov cov naj npawb no nrog lwm lub xov tooj uas nws tau mus ze",
       "subheader_3": "Thaum ib tus neeg twg kuaj tias mob, ces nws yuav qhia tawm yam tsis muaj neeg paub nws npe",
       "subheader_4": "Txhua lub xov tooj yuav ntsuam xyuas lub server seb cov naj npawb ID twg muaj mob thiab yuav nrhiav tas li",
       "subheader_5": "Mam li qhia rau koj paub yog tias {{applicationName}} nrhiav tau ib tus uas mob thiab muaj tus naj npawb ID uas qhia tias mob lawm"
     },
     "proximity_tracing_body1": "Yog tias cov xov tooj uas muaj lub app nyob hauv thiab muab taws, muaj Bluetooth, thiab nyob sib ze rau ib lub sijhawm twg, ces yuav cuv cia tias tau mus raug nyob rau hauv koj lub xov tooj.",
     "proximity_tracing_body2": "Nyob rau lub sijhawm koj mus raug nws, koj tej ntaub ntawv yuav tsis qhia tawm rau nws paub. Lub app no tsis ceev tseg koj ntaub ntawv ntiag tug. Tsuas yog cov naj npawb hloov mus hloov los random ID xwb. Tej no yuav muab lwv tawm li ntawm 14 hnub.",
-    "proximity_tracing_button": "Taws Proximity Tracing",
-    "proximity_tracing_header": "Taws Proximity Tracing",
+    "proximity_tracing_button": "Taws Exposure Notifications",
+    "proximity_tracing_header": "Taws Exposure Notifications",
     "proximity_tracing_subheader1": "Nws ua haujlwm li cas?",
     "proximity_tracing_subheader2": "Kuv li ntaub ntawv puas ceev zoo cia?",
     "proximity_tracing_subheader3": "Lub app no yuav tsis tiv thaiv kom koj tsis txhob kis tus kab mob COVID-19.",
