Add first draft of covid data dashboard
Why:
----

We believe that insight on the data for the virus is a valuable asset
for our users.

This Commit:
----

- Introduces a covid data component that will pull the data from a
specific API and display the results on the home screen when the module
for it is active from the configuration. It needs a valid state
abbreviation to get the correct data for a given jurisdiction.

Co-authored-by: John Schoeman <johnschoeman1617@gmail.com>

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -35,6 +35,13 @@
     "start": "Start",
     "submit": "Submit"
   },
+  "covid_data": {
+    "covid_data": "COVID Data",
+    "cases_today": "Cases today",
+    "deaths_today": "Deaths today",
+    "total_cases": "Total cases",
+    "total_deaths": "Total deaths"
+  },
   "errors": {
     "description": "An error has occurred. Please reload the app.",
     "reload": "Reload",
