Make some design updates

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -21,10 +21,10 @@
     "back": "Back",
     "close": "Close",
     "continue": "Continue",
-    "off": "Off",
+    "off": "OFF",
     "done": "Done",
     "edit": "Edit",
-    "on": "On",
+    "on": "ON",
     "maybe_later": "Maybe later",
     "next": "Next",
     "no_thanks": "No thanks",
@@ -143,7 +143,7 @@
       "location_header": "Location",
       "proximity_tracing_header": "Exposure Notifications",
       "report_positive_result": "Report positive test result",
-      "share": "Share the app and help protect yourself and others.",
+      "share": "Share {{applicationName}}",
       "share_message": "Check out this app {{applicationName}}, which can help us contain COVID-19! {{appDownloadLink}}",
       "take_self_assessment": "Take self assessment",
       "tracing_off_header": "Exposure Detection Off",
